/* * ==========================================================
 * PROYECTO: RECETEA
 * DESCRIPCIÓN: Script de creación del esquema físico (DDL)
 * COMPATIBILIDAD: PostgreSQL
 * INTEGRACIÓN: Java 24 (Uso de BigDecimal para quantity)
 * ==========================================================
 */

-- ----------------------------------------------------------
-- 1. ENTIDADES MAESTRAS (DICCIONARIOS)
-- ----------------------------------------------------------

-- Información de acceso y perfiles
CREATE TABLE "users" (
    "id_user" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "username" varchar(50) UNIQUE NOT NULL,
    "email" varchar(255) UNIQUE NOT NULL,
    "password_hash" varchar(255) NOT NULL,
    "created_at" timestamp DEFAULT (now())
);

-- Clasificación general de recetas
CREATE TABLE "categories" (
    "id_category" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" varchar(100) UNIQUE NOT NULL
);

-- Niveles de complejidad
CREATE TABLE "difficulties" (
    "id_difficulty" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "level_name" varchar(50) UNIQUE NOT NULL
);

-- Clasificación de insumos
CREATE TABLE "ingredient_categories" (
    "id_ing_category" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" varchar(100) UNIQUE NOT NULL
);

-- Unidades para dosificación de ingredientes
CREATE TABLE "unit_measures" (
    "id_unit" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" varchar(50) UNIQUE NOT NULL,
    "abbreviation" varchar(10) UNIQUE NOT NULL
);

-- ----------------------------------------------------------
-- 2. ENTIDADES NUCLEARES (EL DOMINIO)
-- ----------------------------------------------------------

-- Cabecera de la receta y metadatos de preparación
CREATE TABLE "recipes" (
    "id_recipe" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "user_id" integer NOT NULL,
    "category_id" integer NOT NULL,
    "difficulty_id" integer NOT NULL,
    "title" varchar(200) NOT NULL,
    "description" text,
    "prep_time_min" integer CHECK (prep_time_min > 0),
    "servings" integer CHECK (servings > 0),
    "average_score" DECIMAL(3,2) DEFAULT 0.00,                        -- Denormalizado: evita AVG() en lectura (Dashboard/Búsqueda)
    "total_ratings" INTEGER DEFAULT 0 CHECK ("total_ratings" >= 0),   -- Denormalizado: evita COUNT() en lectura (Dashboard/Búsqueda)
    "created_at" timestamp DEFAULT (now())
);

-- Flujo secuencial de instrucciones
CREATE TABLE "steps" (
    "id_step" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "recipe_id" integer NOT NULL,
    "step_order" integer NOT NULL CHECK (step_order > 0),
    "instruction" text NOT NULL
);

-- Gestión de recursos multimedia (URLs o paths locales)
CREATE TABLE "recipe_media" (
    "id_media" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "recipe_id" integer NOT NULL,
    "url" varchar(2048) NOT NULL,
    "is_main" boolean DEFAULT false,
    "sort_order" integer DEFAULT 0
);

-- Catálogo global de ingredientes disponibles
CREATE TABLE "ingredients" (
    "id_ingredient" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "ing_category_id" integer NOT NULL,
    "name" varchar(100) UNIQUE NOT NULL
);

-- 3. RELACIONES Y FEEDBACK SOCIAL
-- ----------------------------------------------------------

-- Detalle de ingredientes por receta (Relación N:M)
CREATE TABLE "recipe_ingredients" (
    "recipe_id" integer NOT NULL,
    "ingredient_id" integer NOT NULL,
    "unit_id" integer NOT NULL,
    "quantity" decimal(10,2) NOT NULL CHECK (quantity > 0),
    PRIMARY KEY ("recipe_id", "ingredient_id")
);

-- Gestión de metadatos/etiquetas sociales
CREATE TABLE "tags" (
    "id_tag" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" varchar(50) UNIQUE NOT NULL
);

-- Asociación de etiquetas a recetas (Relación N:M)
CREATE TABLE "recipe_tags" (
    "recipe_id" integer NOT NULL,
    "tag_id" integer NOT NULL,
    PRIMARY KEY ("recipe_id", "tag_id")
);

-- Colecciones personales de usuarios
CREATE TABLE "favorites" (
    "user_id" integer NOT NULL,
    "recipe_id" integer NOT NULL,
    "created_at" timestamp DEFAULT (now()),
    PRIMARY KEY ("user_id", "recipe_id")
);

-- Puntuaciones y comentarios de la comunidad
CREATE TABLE "ratings" (
    "id_rating" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "user_id" integer NOT NULL,
    "recipe_id" integer NOT NULL,
    "score" integer NOT NULL CHECK (score >= 1 AND score <= 5),
    "comment" text,
    "created_at" timestamp DEFAULT (now())
);

-- ----------------------------------------------------------
-- 4. ÍNDICES DE ROBUSTEZ (OPTIMIZACIÓN)
-- ----------------------------------------------------------

-- Partial Index: Asegura solo una foto de portada por receta
CREATE UNIQUE INDEX idx_unique_main_photo ON "recipe_media" ("recipe_id")WHERE ("is_main" = TRUE);

-- Índice compuesto para integridad secuencial de pasos
CREATE UNIQUE INDEX ON "steps" ("recipe_id", "step_order");

-- Índice compuesto para prevenir spam en valoraciones
CREATE UNIQUE INDEX ON "ratings" ("user_id", "recipe_id");

-- ----------------------------------------------------------
-- 5. COMENTARIOS DE COLUMNA (METADATOS DB)
-- ----------------------------------------------------------

COMMENT ON COLUMN "users"."username" IS 'Nombre de usuario para la comunidad';

COMMENT ON COLUMN "users"."password_hash" IS 'Hash de la contraseña (seguridad)';

COMMENT ON COLUMN "categories"."name" IS 'Ej: Postres, Ensaladas, Pastas';

COMMENT ON COLUMN "difficulties"."level_name" IS 'Fácil, Media, Difícil';

COMMENT ON COLUMN "ingredient_categories"."name" IS 'Agrupación: Lácteos, Carnes, Verduras...';

COMMENT ON COLUMN "unit_measures"."name" IS 'Gramos, Litros, Unidades';

COMMENT ON COLUMN "unit_measures"."abbreviation" IS 'g, l, ud';

COMMENT ON COLUMN "recipes"."user_id" IS 'Autor de la receta';

COMMENT ON COLUMN "recipes"."prep_time_min" IS 'Constraint: CHECK > 0';

COMMENT ON COLUMN "recipes"."servings" IS 'Clave para escalar cantidades en el código. Constraint: CHECK > 0';

COMMENT ON COLUMN "steps"."step_order" IS 'Orden secuencial. Constraint: CHECK > 0';

COMMENT ON COLUMN "recipe_media"."url" IS 'Path local o URL de la imagen';

COMMENT ON COLUMN "recipe_media"."is_main" IS 'Solo un TRUE por receta (vía Partial Index en SQL)';

COMMENT ON COLUMN "recipe_media"."sort_order" IS 'Para ordenar la galería de fotos';

COMMENT ON COLUMN "recipe_ingredients"."quantity" IS 'Uso de BigDecimal en Java para precisión. Constraint: CHECK > 0';

COMMENT ON COLUMN "tags"."name" IS '#Vegano, #Rápido';

COMMENT ON COLUMN "ratings"."score" IS 'Puntuación 1-5. Constraint: CHECK (score >= 1 AND score <= 5)';

COMMENT ON COLUMN "ratings"."comment" IS 'Opinión opcional del usuario';

-- ----------------------------------------------------------
-- 6. INTEGRIDAD REFERENCIAL (FOREIGN KEYS)
-- ----------------------------------------------------------

-- Nota técnica: El uso de DEFERRABLE permite validaciones postergadas en transacciones complejas.

ALTER TABLE "recipes" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id_user") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipes" ADD FOREIGN KEY ("category_id") REFERENCES "categories" ("id_category") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipes" ADD FOREIGN KEY ("difficulty_id") REFERENCES "difficulties" ("id_difficulty") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "ingredients" ADD FOREIGN KEY ("ing_category_id") REFERENCES "ingredient_categories" ("id_ing_category") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "steps" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("id_recipe") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_media" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("id_recipe") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "ratings" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("id_recipe") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_ingredients" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("id_recipe") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_tags" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("id_recipe") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "favorites" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("id_recipe") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "ratings" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id_user") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "favorites" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id_user") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_ingredients" ADD FOREIGN KEY ("ingredient_id") REFERENCES "ingredients" ("id_ingredient") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_ingredients" ADD FOREIGN KEY ("unit_id") REFERENCES "unit_measures" ("id_unit") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_tags" ADD FOREIGN KEY ("tag_id") REFERENCES "tags" ("id_tag") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

-- ----------------------------------------------------------
-- 7. TRIGGERS Y FUNCIONES DE NEGOCIO
-- ----------------------------------------------------------

-- Función que valida si el usuario que puntúa es el mismo que creó la receta
CREATE OR REPLACE FUNCTION fn_prevent_self_rating()
    RETURNS TRIGGER AS $$
BEGIN
    -- Comprobación de identidad entre autor y votante
    IF EXISTS (
        SELECT 1 FROM "recipes"
        WHERE "id_recipe" = NEW."recipe_id" AND "user_id" = NEW."user_id"
    ) THEN
        RAISE EXCEPTION 'Violación de Integridad de Negocio: Un autor no puede valorar su propia receta.';
    END IF;
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

-- Trigger para ratings
CREATE TRIGGER trg_check_self_rating
    BEFORE INSERT ON "ratings"
    FOR EACH ROW
EXECUTE FUNCTION fn_prevent_self_rating();

COMMENT ON TRIGGER trg_check_self_rating ON "ratings" IS 'Garantiza la imparcialidad impidiendo que el creador de una receta se califique a sí mismo.';
